# personal-portfolio

./: .env.example  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  dedupe_sphinx_images.py  report.txt  requirements.txt
.github/workflows/: ci.yml
source/: conf.py  index.md  requirements.txt
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/: Makefile  pyproject.toml  social_media_user_behaviour_analysis.md
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/configs/: data_config.yaml  model_config.yaml  pipeline_config.yaml
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/docs/: architecture.md  eda_decisions.md
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/flagged/: dataset1.csv
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/models/: README.md
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/notebooks/: 01_data_collection.py  02_eda.py  03_feature_selection.py  04_model_experiments.py  crimson_nebula.py
source/project/personal_project/software/programming/python/ai_ml/machine_learning/social_media_user_behaviour_analysis/tests/: test_clean.py  test_factory.py  test_pipeline_smoke.py  test_selection.py
(+145 files in other folders)
