[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smuba"
version = "0.1.0"
description = "Social Media User Behaviour Analysis - industry-grade ML pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "mlflow>=2.14",
    "optuna>=3.6",
    "pandera>=0.19",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "gradio>=4.36",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "fg-data-profiling>=4.19",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "ipykernel>=6.29"]

[project.scripts]
smuba-train = "smuba.pipelines.training_pipeline:main"
smuba-retrain = "smuba.pipelines.retrain:main"
smuba-profile = "smuba.data.profiling:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
